Update format settings to match the smithy repository (#541)